--- a/Unreal/VR/PICO试教学/1.2.2 启用插件.md
+++ b/Unreal/VR/PICO试教学/1.2.2 启用插件.md
@@ -4,3 +4,17 @@
 选择对应版本
 移动到plugins目录
 # 配置
+启用插件PICO XR和OnlineSubsystemPico
+禁用插件Virtual Reality和 Input Devices 组下的所有插件
+打开OnlinePico Settings，添加设置APPID
+重启编辑器
+Editor Startup Map和Game Default Map设置为保存的地图
+Default Touch Interface Clear掉
+禁用 项目设置（Project Settings）> 引擎（Engine）> 渲染（Rendering）> VR 选卡下，取消勾选 移动 HDR（Mobile HDR）
+## 安卓配置
+打开项目设置（Project Settings）>  平台（Platforms） > Android > APK 打包（APK Packaging）
+点击 立即配置（Configure Now） 以及 接受 SDK 证书（Accept SDK License）。这样我们就接受了谷歌设置的安卓打包协议，必须同意这个协议才能进行安卓打包
+将 最低 SDK 版本（Minimum SDK Version） 设置为 24，目标 SDK 版本（Target SDK Version） 设为 32。设置对应的SDK版本没什么好说的
+勾选 启用 KitKat 及以上设备的全屏沉浸（Enable FullScreen Immersive on KitKat and above devices）。否则项目打包后会出现 Android 系统的虚拟按钮。
+在 构建（Build） 选卡下，勾选 支持arm64。建议你使用 arm64 架构来打包应用。如果使用 armv7 打包应用且设备系统版本低于 4.8.0，在初始化 PICO 平台服务时，会造成应用闪退。不过UE5.2，都是无法设置的因为限制已经只支持ARM64了
+构建（Build）勾选 支持 Vulkan，UE5只支持勾选Vulkan。现在的移动和PC平台都推荐使用Vulkan
