--- a/CS/0.0 思考.md
+++ b/CS/0.0 思考.md
@@ -1,4 +1,12 @@
 
 # 坑
 @什么时候使用，将标识符的时候说[[1.3 输出#^69bfbe]]
-文档注释，讲方法的时候说[[1.4 注释#^c92b27]]
+文档注释，讲方法的时候说[[注释#^c92b27]]
+# 没讲的
+各种面板的功能和作用
+各种快捷键的使用
+代码提示
+[常量的使用](https://www.icourse163.org/learn/ZJU-199001?tid=1470101496#/learn/content?type=detail&id=1253329394&cid=1283623094)
+[编译后修改某些数据][[1.4.2 类型和字面量#^e97a58]]
+## IDEA功能
+会根据格式自动空行%%讲解时机未确定%%
