--- a/CS/大纲.md
+++ b/CS/大纲.md
@@ -1,4 +1,4 @@
-# 入门-基本概念和语法
+# 入门-基本概念和语法-简单讲讲
 1 2 3 4 9的一部分 10 12的一部分
 输出
 注释
@@ -14,10 +14,12 @@
 * 循环
 * 其他
 枚举
-# 进阶-面向对象
+# 进阶-面向对象-简单讲讲
 5 6 7 8 9 11 12 13 14
 文档注释
 c# 程序就是由类型组成的，执行文件实际上就是隐藏了上下问的类型，会从这个方法首先执行
+
+# 进阶讲讲面向对象和基本语法作为进阶
 # 高级-
 15 16 17 18 19 20 21 22 23 24 25 26 27 1 2 3
 # 回顾-
