--- a/CS/0.0 思考.md
+++ b/CS/0.0 思考.md
@@ -2,11 +2,26 @@
 # 坑
 @什么时候使用，将标识符的时候说[[1.3 输出#^69bfbe]]
 文档注释，讲方法的时候说[[注释#^c92b27]]
+编译不太好理解，最后再详细讲讲
 # 没讲的
 各种面板的功能和作用
 各种快捷键的使用
 代码提示
 [常量的使用](https://www.icourse163.org/learn/ZJU-199001?tid=1470101496#/learn/content?type=detail&id=1253329394&cid=1283623094)
 [编译后修改某些数据][[1.4.2 类型和字面量#^e97a58]]
+字符串[[1.5 输入文本#^578dbd]]
+类型转换问题 讲算数表达式的时候说
+浮点数为什么被称为浮点数
 ## IDEA功能
 会根据格式自动空行%%讲解时机未确定%%
+# 堆栈数据对比
+## 值类型和引用类型的区别
+### 内存区别
+值类型存储在栈中，引用类型堆里存储数据本身，栈里存储对堆内数据的引用地址
+#### 堆栈对比
+栈：速度快，空间小
+堆：速度慢，空间大
+### 内存图和代码演示
+
+## 如何选择
+对于固定不变的内容使用
