--- a/CS/1.4.2 类型和字面量.md
+++ b/CS/1.4.2 类型和字面量.md
@@ -7,15 +7,14 @@ c# 11
 rider 2023.2
 # 内容
 ## 类型(type)
-定义：变量的形状，如杯子可以容纳水，但是不能容纳货物和大象
-左侧的int就被称作类型，之后会讲解不同种类的类型.
-int类型专门用来存储整数%%问一下张子皓知不知道啥事整数啥是小数，要是不知道还要单独说%%
+定义：能够容纳什么样子的数据，如杯子可以容纳水，但是不能容纳货物和大象
+左侧的int就被称作类型，之后会讲解其他类型
+int类型专门用来存储整数
 ```c#
 int value;
 ```
 ## 字面量
 定义：直接写在代码中的值
-像直接写到代码中的数据
 以下代码中的1就是字面量
 ```cs
 int value = 1; 
