--- a/CS/1.4.3 赋值和初始化.md
+++ b/CS/1.4.3 赋值和初始化.md
@@ -7,12 +7,12 @@ c# 11
 rider 2023.2
 # 内容
 ## 赋值
-将右侧的数据传入左侧的变量
+将右侧的值传入左侧的变量
 ```C#
 int value = 0;
 ```
-![[Pasted image 20230816153802.png]]
 \=是赋值符号，他会把右侧的结果赋值给左侧的变量
+![[Pasted image 20230816153802.png]]
 ## 打印变量
 可以将赋值的内容输出出去，
 ```cs
@@ -37,13 +37,13 @@ value = 10; //赋值 value：10
 ```
 可以将声明和初始化拆分开
 ```c#
-int value;
-value = 0;
+int value; //声明
+value = 0; //初始化
 ```
 建议在声明变量后立刻对其进行初始化
 不进行初始化会报错
 ## 在计算机中的状态
-![[Pasted image 20230816162609.png]]
+![[Pasted image 20230817174227.png]]
 ![[Pasted image 20230816162732.png]]
 ## 任务
 声明两个变量，名为 a和b ，并且a赋值为10，b赋值为20，打印a和b的值
@@ -55,4 +55,3 @@ Console.WriteLine(a);
 Console.WriteLine(b);
 b = 3;
 ```
-# 参考
