--- a/CS/0.0 思考.md
+++ b/CS/0.0 思考.md
@@ -12,6 +12,8 @@
 字符串[[1.5 输入文本#^578dbd]]
 类型转换问题 讲算数表达式的时候说
 浮点数为什么被称为浮点数
+讲类的时候顺便把注释给讲了
+运行时错误和编译时错误[[1.7.1 算数表达式#^b4f9b9]]
 ## IDEA功能
 会根据格式自动空行%%讲解时机未确定%%
 # 堆栈数据对比
