--- a/CS/1.5 输入文本.md
+++ b/CS/1.5 输入文本.md
@@ -6,16 +6,10 @@ Windows 11 business 22H2 x64
 c# 11
 rider 2023.2
 # 内容
-## 如何制作一个控制台计算器
-在之前的课程中我们已经学到了如何存储数据和进行输出，接下来我们讲解如何进行获取输入
-### 制作控制台计算机的条件
-要有地方可以输入数据
-有办法在程序中存储数据
-能够将数据进行计算
-能够有办法输出，使用WriterLine
+在之前的课程中我们已经学到了如何存储数据和进行输出，要想制作一个控制台计算器就需要讲解如何进行获取输入
 ## 输入文本
-我们一般打开一个控制台之后可以输入一些内容来进行命令的调用
-比如我们可以调用ipconfig展示代码
+我们打开一个控制台之后可以输入一些文本来进行命令的调用
+比如我们可以调用ipconfig命令来输出一些文本获取电脑的IP相关信息
 %%演示调用ipconfig命令%%
 ```ps1
 ipconfig
