--- a/CS/大纲.md
+++ b/CS/大纲.md
@@ -1,25 +1,23 @@
 # 入门-基本概念和语法-简单讲讲
-1 2 3 4 9的一部分 10 12的一部分
-输出
-注释
-类型
-变量
-更多的类型
-字面量
-字符串
-内联字符串
-各种运算符
-语句
-* 判断
-* 循环
-* 其他
-枚举
-# 进阶-面向对象-简单讲讲
-5 6 7 8 9 11 12 13 14
+3 4 5 6 9 10
+数据类型 运算符流程控制 方法和参数 类型 更多数据类型
+运算符 流程控制 函数 字符串 枚举 结构 类（6-10） 
+## 大纲
+| 我的         | 图解 | 本质                  | MK       |
+| ------------ | ---- | --------------------- | -------- |
+| 运算符       | 9    | 运算符流程控制        | 运算符   |
+| 流程控制     | 10   | 运算符流程控制        | 流程控制 |
+| 函数         | 6    | 方法和参数            | 函数     |
+| 类型         | 4 5    | 类型                  | 类       |
+| 更多数据类型 |      | 数据类型 更多数据类型 | 字符串         |
+# 进阶
+结构良好的类型 异常处理 泛型 委托和表达式 事件 结构和记录（结构部分） 继承 接口
+7 8  11 12 13 14
+数组 继承（11-14） 多态（14-22） 封装 静态类型（24-26） 其他（27-30）
 文档注释
 c# 程序就是由类型组成的，执行文件实际上就是隐藏了上下问的类型，会从这个方法首先执行
-
-# 进阶讲讲面向对象和基本语法作为进阶
-# 高级-
-15 16 17 18 19 20 21 22 23 24 25 26 27 1 2 3
-# 回顾-
+# 高级
+15 16 17 18 19 20 21 22 23 24 25 26 27 1 2 
+LINQ 自定义集合 反射 异步 迭代器 线程 平台互操作和不安全代码（以后再将） 公共语言运行时基础 结构和记录（记录和类型记录部分） 
+# 补全-将之前没讲全的知识补全
+9.2 字面量细节
